zcheck (head builder tool to check balancing)
mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
[Apr 13 2009] - Jamdog
  Bug-Fix: Shopping for multiple items caused an occasional crash due to NULL variable - now fixed (I hope)
[Apr 12 2009] - Jamdog
  Bug-Fix: Stat player displayed current quest information incorrectly - fixed 'if'
[Apr 11 2009] - Jamdog
  Bug-Fix: NPC check added to do_gen_ps function (thanks drefs)
  Bug-Fix: Fixed crash bug in remove_player where index entry is removed too early (thanks drefs)
  Bug-Fix: Commands and Socials list correctly when switched into a mob (thanks Rumble)
[Apr 06 2009] - Jamdog
  Bug-Fix: Changing a player name no longer allows two words (thanks Slicer)
[Apr 05 2009] - Jamdog
  Bug-Fix: Now frees memory used by qedit and hedit when closing a socket (Thanks Xiuhtecuhtli)
tbaMUD 3.59
[Apr 05 2009] - Rumble
  Updated World and files for 3.59 release.
[Apr 02 2009] - Rumble
  real_abils.str changed from 25 to 18. Since 18 is max str.
  Changed ch to k in do_stat for quests. (thanks Frenze)
[Mar 14 2009] - Jamdog
  Bug-Fix: real_shop function could hang if a shop was added with the max VNUM (Thanks Slicer)
  Removed find_shop function, which was a duplicate of real_shop.
[Mar 13 2009] - Jamdog
  Bug-Fix: Character deletion (remove_player, players.c), where the wrong player was potentially being deleted.
  Added Zone Flags, including zedit sub-menu
  Added Zone level restrictions, including zedit sub-menu
  Added zlock and zunlock commands
  Added areas command
  Set GRID flag on zones 0, 12 and 30
[Mar 08 2009] - Jamdog
  Fixed a possible crash bug in delete_object (genobj.c) (Thanks Slicer)